--- a/user/themes/terrallewis/css/terrallewis.css
+++ b/user/themes/terrallewis/css/terrallewis.css
@@ -11,8 +11,8 @@ body {
   content: '';
   position: absolute;	
   width: 100%;
-  height: 71px;
-  top: -32px;
+  height: 101px;
+  top: -52px;
   left: 0;
   -webkit-transform: skewY(2.5deg);
   -moz-transform: skewY(2.5deg);
@@ -184,6 +184,7 @@ ul#nav li.current a {
  
  #testimonials:before {
   background: #ebeeee;
+  top: -42px !important;
 }
 
 #testimonials .columns {
