--- a/user/themes/terrallewis/css/terrallewis.css
+++ b/user/themes/terrallewis/css/terrallewis.css
@@ -7,24 +7,6 @@ body {
 #content .slab {
 	position:relative;
 }
-#content section:before {
-  content: '';
-  position: absolute;	
-  width: 100%;
-  height: 101px;
-  top: -52px;
-  left: 0;
-  -webkit-transform: skewY(2.5deg);
-  -moz-transform: skewY(2.5deg);
-  -ms-transform: skewY(2.5deg);
-  -o-transform: skewY(2.5deg);
-  transform: skewY(2.5deg);
-  -webkit-backface-visibility: hidden;		
-}
-#content section .row {
-	margin-top: 26px;
-	margin-bottom: 26px;
-}
 
 /* ------------------------------------------------------------------ */
 /* a. Header Styles
@@ -32,7 +14,6 @@ body {
 header {
 background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('http://cdn.wonderfulengineering.com/wp-content/uploads/2014/04/space-wallpapers-3.jpg') no-repeat top center;
 	background-attachment: fixed;
-	margin-bottom:20px;
 }
 header .banner-text h1 {
    font: 125px/1.1em 'Lato', sans-serif;	
@@ -52,10 +33,6 @@ header .banner-text h2 {
 header .banner-text h3 {
    font: 18px/1.1em 'Lato', sans-serif;	
    text-shadow: none;
-}
-
-ul#nav { 
-
 }
 
 ul#nav li.current { 
@@ -79,23 +56,12 @@ ul#nav li.current a {
 /* ------------------------------------------------------------------ */
 
 #about {
-	background: #1b1b1b;
-	padding-top: 60px;
-	padding-bottom: 60px
+	background: #DE5D07;
 }
 
-#about:before {
-   background: #1b1b1b;
-  -webkit-transform: skewY(0deg) !important;
-  -moz-transform: skewY(0deg) !important;
-  -ms-transform: skewY(0deg) !important;
-  -o-transform: skewY(0deg) !important;
-  transform: skewY(0deg) !important;   
-}
-
-#about .row {
-	margin-top:0;
-	margin-bottom: 0;
+#about p {
+	font-size: 18px;
+	color: #fff;
 }
 
 #about h2 {
@@ -121,25 +87,26 @@ ul#nav li.current a {
 /* ------------------------------------------------------------------ */
 /* c. Resume Styles
 /* ------------------------------------------------------------------ */
-#resume:before {
-  background: #fff;
+#resume {
+  background: #1b1b1b;
 }
-#resume h3 {
-	font: 25px/28px 'Lato', sans-serif;
+#resume h1 {
+   font: 22px/24px 'Lato', sans-serif;
+   text-transform: uppercase;
+   letter-spacing: 1px;
+   text-align: center;
+   margin-bottom: 48px;
+   color: #fff;
 }
-#resume .header-col {
-    background: #000;
-    color: #fff;
+
+#resume h1 > span {
+	border: none;
 }
 #resume .info {
     font: 16px/24px 'Lato', sans-serif;
     text-transform: uppercase;
     color: #f06000;
     opacity: .65;
-}
-#resume h1 span {
-    color: #fff;
-    border: none;
 }
 #resume p {
 	color: #000;
@@ -153,24 +120,26 @@ ul#nav li.current a {
 
 .bars li,
 .bar-expand {
-  	height: 12px;
+  	height: 4px;
+}
+.bars li {
+	background: #fff;
 }
 .bar-expand {
   	background: #f06000;
 }
 .bars li em {
-	font: 15px 'Lato', sans-serif
+	font: 15px 'Lato', sans-serif;
+	font-weight: 600;
+	color: #fff;
 }
 
 /*----------------------------------------------*/
 /*	Portfolid
 /*----------------------------------------------*/
-#portfolio:before {
-  background: #ebeeee; 
-}
-
 #portfolio h1 {
 	color: #333;
+	font: 22px/24px 'Lato', sans-serif;
 }
 
 /*----------------------------------------------*/
@@ -181,15 +150,6 @@ ul#nav li.current a {
 			-webkit-background-size: cover !important;
    background-attachment: fixed;
  }
- 
- #testimonials:before {
-  background: #ebeeee;
-  top: -42px !important;
-}
-
-#testimonials .columns {
-	margin: 90px 0;
-}
 
 
 /*----------------------------------------------*/
@@ -197,10 +157,6 @@ ul#nav li.current a {
 /*----------------------------------------------*/
 #contact {
 	background: #1b1b1b;
-}
-
-#contact:before {
-  background: #1b1b1b;
 }
 
 #contact button.button {
