--- a/user/themes/terrallewis/templates/modular/resume.html.twig
+++ b/user/themes/terrallewis/templates/modular/resume.html.twig
@@ -1,11 +1,13 @@
 <div class="slab">
 	<section id="resume">
 	    {% for section in page.header.sections %}
-	    <div class="row {{ section.css_class }} wow bounceInLeft" data-wow-delay=".33s">
-	        <div class="columns header-col">
-	            <h1><span>{{ section.title }}</span></h1>
-	        </div>
-	        <div class="nine columns main-col">
+	    <div class="row {{ section.css_class }} wow bounceInUp" data-wow-delay=".33s">
+		    {% if section.title %}
+		        <div class="twelve columns header-col">
+		            <h1><span>{{ section.title }}</span></h1>
+		        </div>
+		    {% endif %}	        
+	        <div class="twelve columns">
 	            {% for item in section.items %}
 	            <div class="row item">
 	                <div class="twelve columns">
@@ -15,10 +17,11 @@
 	                    {% if item.info or item.date %}
 	                    <p class="info">{{ item.info }} <span>&bull;</span> <em class="date">{{ item.date }}</em></p>
 	                    {% endif %}
-	                    <p>
-	                        {{ item.description }}
-	                    </p>
-	
+						{% if item.description %}
+		                    <p>
+		                        {{ item.description }}
+		                    </p>
+						{% endif %}
 	                    {% if item.skills %}
 	                    <div class="bars">
 	                        <ul class="skills">
