--- a/user/themes/terrallewis/css/terrallewis.css
+++ b/user/themes/terrallewis/css/terrallewis.css
@@ -200,8 +200,9 @@ header .scrolldown a:hover {
 }
 
 #contact .lead > p {
-	font-size: 18px;
+	font-size: 22px;
 	font-weight: 300;
+	text-align: center;
 }
 
 
