--- a/user/themes/terrallewis/css/terrallewis.css
+++ b/user/themes/terrallewis/css/terrallewis.css
@@ -45,6 +45,10 @@ header .scrolldown a:hover {
    font-weight:800;
  }
 
+#nav li a:hover {
+	color: #F06000;
+}
+
 .opaque {
 	background: #1b1b1b;
 }
@@ -154,6 +158,13 @@ header .scrolldown a:hover {
 	text-align: center;
 }
 
+@media only screen and (max-width: 767px) {
+	#portfolio-wrapper {
+		width: 270px;
+		margin: 0 auto;
+	}
+}
+
 /*----------------------------------------------*/
 /*	Testimonials
 /*----------------------------------------------*/
@@ -175,6 +186,11 @@ header .scrolldown a:hover {
 	background-color: #f06000;
 	border-radius: 30px;
 	font: 16px/30px 'Lato', sans-serif;
+}
+
+#contact button.button:hover {
+	background-color: #d05401;
+	color: #fff;
 }
 
 #contact input,
