--- a/user/themes/terrallewis/templates/modular/form.html.twig
+++ b/user/themes/terrallewis/templates/modular/form.html.twig
@@ -1,16 +1,16 @@
 <div class="slab">
 	<section id="contact">
 	    <div class="row wow bounceInUp" data-wow-delay=".33s">
-	        <div class="twelve columns lead">
+	        <div class="eight columns lead">
 	            {{ page.content}}
 	            {% include "forms/form.html.twig" %}
 	        </div>
-{#	        <aside class="four columns footer-widgets">
+	        <aside class="four columns footer-widgets">
 	            <div class="widget widget_tweets">
 	                <h4 class="widget-title">Latest Tweets</h4>
 	                <div id="tw-widget1"></div>
 	            </div>
-	        </aside>#}
+	        </aside>
 	    </div>
 	</section>
 </div>
