--- a/user/themes/terrallewis/templates/modular/testimonials.html.twig
+++ b/user/themes/terrallewis/templates/modular/testimonials.html.twig
@@ -1,5 +1,5 @@
 <div class="slab">
-	<section id="testimonials">
+	<section id="quotes">
 	    <div class="text-container">
 	        <div class="row wow bounceInLeft">
 	            <div class="two columns header-col">
