added link and styles for  symplicity website

--- a/user/themes/terrallewis/css/terrallewis.css
+++ b/user/themes/terrallewis/css/terrallewis.css
@@ -67,6 +67,14 @@ header .scrolldown a:hover {
 	background: #DE5D07;
 }
 
+#about a {
+	text-decoration: underline;
+}
+
+#about a:hover {
+	color: #1b1b1b;
+}
+
 #about p {
 	font-size: 18px;
 	color: #fff;
