--- a/user/themes/terrallewis/templates/partials/base.html.twig
+++ b/user/themes/terrallewis/templates/partials/base.html.twig
@@ -41,6 +41,16 @@
             {% do assets.addJs('theme://js/init.js') %}
             {% do assets.addJs('https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js') %}            
             {% include 'partials/twFetcher.html.twig' %}
+            <script>
+                (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+                })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+                ga('create', 'UA-83804316-1', 'auto');
+                ga('send', 'pageview');
+
+            </script>
         {% endblock %}
         {{ assets.js() }}
     </body>
