fixed favicon path

--- a/user/themes/terrallewis/templates/partials/base.html.twig
+++ b/user/themes/terrallewis/templates/partials/base.html.twig
@@ -8,7 +8,7 @@
         <title>{% if header.title %}{{ header.title }} | {% endif %}{{ site.title }}</title>
         {% include 'partials/metadata.html.twig' %}
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="icon" type="image/png" href="{{ base_url_simple }}/{{ theme_url }}/images/favicon.png">
+        <link rel="icon" type="image/png" href="/{{ theme_url }}/images/favicon.png">
          {% block stylesheets %}
                 {% do assets.addCss('theme://css/default.css') %}
                 {% do assets.addCss('theme://css/layout.css') %}
