--- a/user/themes/terrallewis/templates/partials/base.html.twig
+++ b/user/themes/terrallewis/templates/partials/base.html.twig
@@ -39,6 +39,7 @@
             {% do assets.addJs('theme://js/waypoints.js') %}
             {% do assets.addJs('theme://js/jquery.fittext.js') %}
             {% do assets.addJs('theme://js/magnific-popup.js') %}
+            {% do assets.addJs('https://cdn.jsdelivr.net/jquery.mixitup/2.1.11/jquery.mixitup.min.js') %}
             {% do assets.addJs('theme://js/init.js') %}
             {% do assets.addJs('https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js') %}
             {% include 'partials/twFetcher.html.twig' %}
