--- a/user/themes/terrallewis/css/terrallewis.css
+++ b/user/themes/terrallewis/css/terrallewis.css
@@ -190,15 +190,26 @@ header .scrolldown a:hover {
 	background: #1b1b1b;
 }
 
-#contact button.button {
+#contact button.button,
+#portfolio .mixitup button {
 	background-color: #f06000;
 	border-radius: 30px;
 	font: 16px/30px 'Lato', sans-serif;
 }
 
+#portfolio .mixitup button {
+	background-color: #1b1b1b;
+	border-radius: 3px;
+}
+
 #contact button.button:hover {
 	background-color: #d05401;
 	color: #fff;
+}
+
+#portfolio .mixitup button:hover,
+#portfolio .mixitup button.active {
+	background-color: #f06000;
 }
 
 #contact input,
