--- a/user/themes/terrallewis/templates/modular/portfolio.html.twig
+++ b/user/themes/terrallewis/templates/modular/portfolio.html.twig
@@ -5,13 +5,13 @@
 	            {{ page.content }}
 				<div class="mixitup text-center controls">
 					<button type="button" class="filter" data-filter="all">All</button>
-					<button type="button" class="filter" data-filter=".web-design">Web</button>
 					<button type="button" class="filter" data-filter=".print-design">Print</button>
+					<button type="button" class="filter" data-filter=".web-design">Web</button>
 				</div>
-	            <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf container">
+	            <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
 	                {% for item in page.header.portfolio %}
 	                <div class="columns portfolio-item mix {{ item.category }}">
-	                    <div class="item-wrap wow flipInX" data-wow-delay=".33s">
+	                    <div class="item-wrap wow flipInX">
 	                        <a href="#modal-{{ loop.index }}" title="">
 	                            {{ page.media[item.img].cropZoom(215, 215).html() }}
 	                            <div class="overlay">
