--- a/user/themes/terrallewis/css/terrallewis.css
+++ b/user/themes/terrallewis/css/terrallewis.css
@@ -203,6 +203,7 @@ header .scrolldown a:hover {
 #portfolio .mixitup button {
 	background-color: #1b1b1b;
 	text-transform: uppercase;
+	letter-spacing: 3px;
 }
 
 #contact button.button:hover {
