--- a/user/themes/terrallewis/css/terrallewis.css
+++ b/user/themes/terrallewis/css/terrallewis.css
@@ -194,26 +194,31 @@ header .scrolldown a:hover {
 }
 
 #contact button.button,
-#portfolio .mixitup button {
+#portfolio .mixitup button,
+#portfolio .mixitup button:hover,
+#portfolio .mixitup button.active {
 	background-color: #f06000;
 	border-radius: 30px;
 	font: 16px/30px 'Lato', sans-serif;
 }
 
 #portfolio .mixitup button {
-	background-color: #1b1b1b;
+	background-color: transparent;
 	text-transform: uppercase;
 	letter-spacing: 3px;
+	font-size: 18px;
+	color: #222;
+}
+
+#portfolio .mixitup button:hover,
+#portfolio .mixitup button.active {
+	color: #fff;
+	font-size: 18px;
 }
 
 #contact button.button:hover {
 	background-color: #d05401;
 	color: #fff;
-}
-
-#portfolio .mixitup button:hover,
-#portfolio .mixitup button.active {
-	background-color: #f06000;
 }
 
 #contact input,
