--- a/user/themes/terrallewis/css/terrallewis.css
+++ b/user/themes/terrallewis/css/terrallewis.css
@@ -207,7 +207,7 @@ header .scrolldown a:hover {
 	text-transform: uppercase;
 	letter-spacing: 3px;
 	font-size: 18px;
-	color: #222;
+	color: grey;
 }
 
 #portfolio .mixitup button:hover,
