--- a/user/plugins/form/templates/forms/field.html.twig
+++ b/user/plugins/form/templates/forms/field.html.twig
@@ -4,7 +4,7 @@
 {% set vertical = true %}
 
 {% block field %}
-    <div class="form-field {% if field.name == 'firstname' %} hide-field{% endif %} {% if vertical %} vertical{% endif %}{% if field.outerclasses is defined %} {{ field.outerclasses }}{% endif %}">
+    <div class="form-field{% if vertical %} vertical{% endif %}{% if field.outerclasses is defined %} {{ field.outerclasses }}{% endif %}">
         {% block contents %}
             <div class="form-label{% if not vertical %} block size-1-3{% endif %}">
                 <label class="inline" {% if field.id is defined %}for="{{ field.id|e }}" {% endif %} >
