--- a/user/plugins/form/templates/forms/default/data.html.twig
+++ b/user/plugins/form/templates/forms/default/data.html.twig
@@ -1,6 +1,8 @@
 {% for field in form.fields %}
 {% block field %}
+    {% if field.name != 'firstname' %}
         <p>{% block field_label %}<strong>{{ field.label }}</strong>{% endblock %}
             : {% block field_value %}{{ string(form.value(field.name)|e)|nl2br }}{% endblock %}</p>
+    {% endif %}
 {% endblock %}
 {% endfor %}
